<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="18dp">


    <EditText
        android:id="@+id/dialog_editText_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10sp">

        <Button
            android:id="@+id/password_security_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_secondary"
            android:text="@string/back"
            android:textSize="18sp" />

        <Button
            android:id="@+id/password_security_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_primary"
            android:text="@string/edita_data"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>