<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorGray"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/request_to_increase_text_view"
        android:layout_width="314dp"
        android:layout_height="83dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enter_a_reason_for_the_limit"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryBlue"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/request_to_increase_cancel"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn_secondary"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_to_increase_edit_text_descrytpion"
        app:layout_constraintVertical_bias="0.952" />

    <Button
        android:id="@+id/request_to_increase__button_send"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_secondary"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_to_increase_edit_text_descrytpion" />

    <EditText
        android:id="@+id/request_to_increase_edit_text_descrytpion"
        android:layout_width="282dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/decryption"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_to_increase_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>