<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="310dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:background="@color/colorPrimaryBackground">

    <Button
        android:id="@+id/dialog_edit_user_button_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_edit_user_edit_text_phone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="25dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/dialog_edit_user_button_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_edit_user_edit_text_phone"
        android:layout_alignParentStart="true"
        android:background="@drawable/btn_primary"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/edit_profile" />

    <TextView
        android:id="@+id/dialog_edit_user_text_view_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_edit_user_edit_text_address"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/dialog_edit_user_text_view_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_edit_user_edit_text_last_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/dialog_edit_user_text_view_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_edit_user_edit_text_first_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/dialog_edit_user_text_view_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/dialog_edit_user_edit_text_first_name"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/dialog_edit_user_text_view_first_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:background="@drawable/btn_whitescene"
        android:inputType="textPersonName"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/dialog_edit_user_edit_text_last_name"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/dialog_edit_user_text_view_last_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:background="@drawable/btn_whitescene"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/dialog_edit_user_edit_text_address"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/dialog_edit_user_text_view_address"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_whitescene"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/dialog_edit_user_edit_text_phone"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/dialog_edit_user_text_view_phone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_whitescene"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/phone" />
</RelativeLayout>