<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    tools:src="@color/colorWhite"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="12dp"
    android:elevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/reservation_item_list_image"
            android:layout_width="128dp"
            android:layout_height="157dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/book_wellmet" />

        <TextView
            android:id="@+id/reservation_item_list_text_title"
            android:layout_width="287dp"
            android:layout_height="22dp"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toEndOf="@+id/reservation_item_list_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reservation_item_list_textView_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/reserved"
            android:textColor="@color/colorSecondaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toEndOf="@+id/reservation_item_list_image"
            app:layout_constraintTop_toBottomOf="@+id/reservation_item_list_text_title" />

        <TextView
            android:id="@+id/reservation_item_list_text_dateOfBorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/yyyy_mm_dd"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toEndOf="@+id/reservation_item_list_textView_data"
            app:layout_constraintTop_toBottomOf="@+id/reservation_item_list_text_title" />

        <TextView
            android:id="@+id/reservation_item_list_text_timeAgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:text="@string/how_much_days_ago"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toEndOf="@+id/reservation_item_list_image"
            app:layout_constraintTop_toTopOf="@+id/reservation_item_list_text_dateOfBorrow" />

        <Button
            android:id="@+id/reservation_item_list_button_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="56dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/Cancel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toEndOf="@+id/reservation_item_list_text_timeAgo"
            app:layout_constraintTop_toTopOf="@+id/reservation_item_list_text_dateOfBorrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>